--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       All trademarks and registered trademarks appearing on 
       this site are the property of their respective owners.
     </div>
-
+  </div>
   </div>
   </body>
 </html>
