--- a/blog.html
+++ b/blog.html
@@ -8,15 +8,24 @@
 
   <body>
     <header class="top">
-      <img id="headerLogo"
-           src="images/headerLogo.gif" alt="Starbuzz Coffee header logo image">
-      <img id="headerSlogan"
-          src="images/headerSlogan.gif" alt="Providing all the caffeine you need to power your life.">
-    </header>
-
+      <div id="head"></div>
+    <nav>
+    <ul>
+      <li><a href="index.html">HOME</a></li>
+      <li class="selected"><a href="blog.html">Blog</a></li>
+      <li><a href="">INVENTIONS</a></li>
+      <li><a href="">RECIPES</a></li>
+      <li><a href="">LOCATIONS</a></li>
+  </ul>
+</nav>
 	<div id="tableContainer">
 	<div id="tableRow">
-
+    display: table-cell;
+    background:       #efe5d0 url(images/background.gif) top left;
+    font-size:        105%;
+    padding:          15px;
+    vertical-align: top;
+  
 	<section id="drinks">
 		<h1>BEVERAGES</h1>
 			<p>House Blend, $1.49</p>
