--- a/index.html
+++ b/index.html
@@ -14,13 +14,20 @@
         <div id="award">
           <img src="images/award.gif" alt="Roaster of the year award">
     </header>
-
+  <nav>
+    <ul>
+        <li><a href="index.html">HOME</a></li>
+        <li class="selected"><a href="blog.html">Blog</a></li>
+        <li><a href="">INVENTIONS</a></li>
+        <li><a href="">RECIPES</a></li>
+        <li><a href="">LOCATIONS</a></li>
+    </ul>
+  </nav>
     <div id="coupon">
       <a href="freecoffee.html" title="click here to get your free coffee">
         <img src="images/ticket.gif" alt="Starbuzz coupon ticket">
       </a>
     </div>
-    
   <div id="tableContainer">
     <div id="tableRow">
     <div id="drinks">
